wip(*) transaction logic refactoring